# genai-tk

./: .blueprint.input.history  .dockerignore  .genai_tk  .gitignore  AGENTS.md  ANONYMIZER_REFACTOR.md  Agents.md  CHANGELOG.md  IDEAS.md  MAKE_TO_JUST_MIGRATION.md  Makefile  None  README.md  REFACTORING_SUMMARY.md  browser_control_tests.md  fib.py  importime.txt  justfile  pyproject.toml  tartswith('_')])  test_copilot_llm.py  tk.just
.deer-flow/.deer-flow/: memory.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.poolside/: settings.local.yaml
browser_control/: __init__.py
browser_control/main/: streamlit.py
config/: Makefile.template  README.md  app_conf.yaml  baseline.yaml  mcp_servers.yaml  overrides.yaml  rag.yaml  sandbox.yaml  webapp.yaml  workflows.yaml
config/agents/: deerflow.yaml  langchain.yaml  smolagents.yaml
config/basic/: sandbox.yaml
config/demos/: codeact_agent.yaml  react_agent.yaml
config/examples/: mcp_servers.yaml  monitoring.yaml  sandbox.yaml  tk_servers.yaml  workflows.yaml
config/mcp/: servers.yaml
config/providers/: embeddings.yaml  llm.yaml  providers.yaml
core/: llm_factory.py  mcp_client.py
deploy/: Dockerfile  docker-compose.langfuse.yaml  docker.just
docs/: DEER_FLOW_SETUP_CHANGES.md  Deer_Flow_Integration.md  TESTING_GUIDE.md  agents-guide.md  agents.md  baml.md  browser_control.md  cli.md  configuration.md  copilot-agent-support.md  core.md  deep_agents_refactoring_complete.md  deepagent_integration.md  deer-flow.md  deer_flow_error_handling.md  deer_flow_improvements_round2.md  deer_flow_improvements_summary.md  deer_flow_input_box_patch.md  deer_flow_quick_reference.md  deer_flow_skills_management.md  deerflow_cli_fix_summary.md  deerflow_config_improvements.md  docker.md  evaluation_testing.md  extra.md  llm-selection.md  llm_factory_refactoring.md  mcp-servers.md  middleware-pii-and-routing.md  monitoring.md  nlp.md  prefect.md  rag.md  sandbox_backend.md  sandbox_bot_detection.md  sandbox_support.md  scaffolding.md  skills.md  webapp.md  workflows.md
docs/design/: access_control_agentic_rag.md  copilot-agent-support.md  copilot-studio-integration.md  deepagents-cli_integration.md  harness_interoperability_proposal.md  llm_factory_refactoring.md  sandbox_bot_detection.md  workflow_dsl_vs_kestra.md  workflow_engine_prefect_redesign.md
examples/: deer_flow_validation_demo.py  vllm_demo.py
examples/mcp_server/: weather_server.py
examples/notebooks/: anonymize_rag_pipeline_demo.ipynb  chunking_factory_demo.ipynb  middleware_anonymization_demo.ipynb  middleware_router_demo.ipynb  prefect_and_workflows.ipynb  rag_pipeline_demo.ipynb  retriever_types_demo.ipynb  scratchpad.ipynb
extra/: autogen_utils.py  cognee_utils.py  custom_presidio_anonymizer.py  kv_store_factory.py
extra/chains/: fabric_chain.py
extra/retrievers/: bm25s_retriever.py
extra/tools_langchain/: config_loader.py  sql_tool_factory.py
extra/tools_smolagents/: config_loader.py  sql_tools.py
genai_tk/: __init__.py
genai_tk/agents/: __init__.py  commands_agents.py  langchain_setup.py  rich_display.py
genai_tk/cli/: base.py  command_tree.py  commands_core.py  commands_info.py  commands_monitoring.py  commands_skills.py  commands_test.py  config_display.py  langchain_agent.py  rich_langchain_middleware.py  smolagents_shell.py
genai_tk/compat/: __init__.py  langchain.py
genai_tk/config_mgmt/: __init__.py  config_exceptions.py  config_mngr.py  config_model.py  features.py  file_patterns.py  import_utils.py  test_config.py
genai_tk/core/: cache.py  chain_registry.py  cli_commands.py  commands_core.py  commands_info.py  commands_test.py  deep_agents.py  embeddings_factory.py  embeddings_store.py  langgraph_runner.py  llm_factory.py  mcp_client.py  models_db.py  notebook_runner.py  prompts.py  providers.py  retriever_factory.py  structured_output.py  vector_store_factory.py  vector_store_registry.py
genai_tk/extra/: autogen_utils.py  cli_commands.py  cli_commands_agents.py  cognee_utils.py  commands_extra.py  custom_presidio_anonymizer.py  gpt_researcher_helper.py  image_analysis.py  kv_store_factory.py  kv_store_registry.py  markdownize_prefect_flow.py  pgvector_factory.py  postgres.py  ppt2pdf_prefect_flow.py
genai_tk/main/: __init__.py  cli.py  commands_agents.py  commands_core.py  commands_extra.py  commands_init.py  models_skills.py  scaffolder.py  skills_manager.py
genai_tk/mcp/: __init__.py  agent_tool.py  cli_commands.py  config.py  script_generator.py  server_builder.py  tool_adapter.py
genai_tk/tools/: tool_specs.py
genai_tk/utils/: agent_middleware.py  basic_auth.py  config_exceptions.py  config_mngr.py  file_patterns.py  hashing.py  import_utils.py  langgraph.py  load_data.py  local_trace_log.py  logger_factory.py  notebook_runner.py  prefect_logging.py  prefect_server.py  rich_widgets.py  singleton.py  spacy_model_mngr.py  tracing.py  typer_display.py
genai_tk/webapp/: __init__.py
genai_tk/wip/: autogen_utils.py  browser_use_langchain.py  cognee_utils.py  config_loader.py  structured_output.py  test_structured_output.py
genai_tk/workflow/: __init__.py  commands.py  compiled_models.py  compiler.py  executor.py  models.py  prefect_commands.py  registry.py  resolver.py
large_tool_results/: toolu_bdrk_015uC2yRnTSjGyut4rjZH5Eh  toolu_bdrk_01SjWVqbA37xZhtHTmU3o4UK
notebooks/: chunking_factory_demo.ipynb  config_error_handling_example.py  middleware_anonymization_demo.ipynb  middleware_router_demo.ipynb  rag_pipeline_demo.ipynb  retriever_types_demo.ipynb  scratchpad.ipynb
scripts/: browser_probe.py  enedis_probe.py  evals_probe.py  extract_cdf_from_json.py  file_open_test.py  install_deer_flow_backend.py  patch_agent_sandbox_wheel.py  setup_deerflow.sh
skills/: README.md
skills/custom/: README.md  code-review-excellence.md
test1-edgeparse.md/: manifest.json
tests/: TESTING_GUIDE.md  TEST_REFACTORING_SUMMARY.md  __init__.py  conftest.py
tests/baml_src/: clients.baml  contract_ru_extraction_OLD.baml  delivery_note.baml  generators.baml  (+2 more)
utils/: basic_auth.py  logger_factory.py
(+468 files in other folders)
