[project]
name = "genai-tk"
version = "0.1.0"
description = "GenAI Toolkit - Core components for building AI applications"
authors = [{ name = "Thierry Caminel", email = "thierry.caminel@atos.net" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    # ============================================
    # Core Infrastructure
    # ============================================
    "pydantic>=2.7.0,<3",       # Data validation and settings management
    "loguru>=0.7.3",            # Structured logging with better UX
    "typer>=0.13.0",            # CLI framework with type hints
    "omegaconf>=2.3.0",         # Hierarchical configuration system
    "rich[jupyter]>=13.9.4",    # Rich terminal formatting and progress bars
    "universal-pathlib>=0.2.6", # Unified path interface for local/cloud storage
    "python-dotenv>=1.1.1",     # Environment variable management
    "beartype>=0.21.0",         # Runtime type validation
    "devtools>=0.12.2",         # Debug printing and development utilities
    "xxhash>=3.6.0",            # Fast non-cryptographic hash functions
    # ============================================
    # LangChain Core Framework
    # ============================================
    "langchain>=1.0",                 # Core LangChain library
    "langchain-core>=1.0",            # LangChain abstractions and base classes
    "langchain-classic>=1.0.0",       # Classic LangChain components
    "langchain-community>=0.4",       # Community-contributed integrations
    "langchain-experimental>=0.0.42", # Experimental features and patterns
    "langgraph>=1.0",                 # Graph-based workflows and agent orchestration
    "langserve>=0.3",                 # Deploy LangChain apps as REST APIs
    "langchainhub>=0.1",              # Share and discover prompts/chains
    # ============================================
    # LLM Provider Integrations
    # ============================================
    "langchain-openai>=1.0",    # OpenAI models (GPT-4, GPT-3.5, etc.)
    "langchain-ollama>=1.0",    # Local Ollama models integration
    "langchain-deepseek>=1.0",  # DeepSeek models integration
    "langchain-mistralai>=1.0", # Mistral AI models integration
    "langchain-groq>=1.0",      # Groq inference engine integration
    "langchain-litellm>=0.3.2", # LiteLLM unified interface
    "openai>=1.80.0",           # Official OpenAI Python client
    "litellm>=1.74,<2",         # Unified LLM API (100+ models)
    "mistralai>=1.7.0",         # Official Mistral AI client
    # ============================================
    # Agent Frameworks
    # ============================================
    "smolagents[toolkit, mcp, openai, litellm, docker]>=1.17", # Lightweight agentic framework
    "deepagents>=0.0.5",                                       # Deep learning agent utilities
    "langchain-mcp-adapters>=0.1",                             # Model Context Protocol adapters
    "mcp[cli]>=1.4.1",                                         # Model Context Protocol core
    # ============================================
    # Vector Stores & Embeddings
    # ============================================
    "chromadb>=1.0",         # Vector database for embeddings
    "langchain-chroma>=1.0", # LangChain integration for ChromaDB
    # ============================================
    # Knowledge Graphs & Structured Data
    # ============================================
    "baml-cli>=0.1.0",       # BAML CLI for structured data extraction
    "baml-lib>=0.42.0",      # BAML library for LLM-powered parsing
    "langchain-kuzu>=0.3.0", # LangChain integration for Kuzu graph DB
    "kuzu>=0.7.1",           # Embedded graph database
    # ============================================
    # NLP & Text Processing
    # ============================================
    "tokenizers>=0.21.0",                                                                                                                     # Hugging Face tokenizers (for chonkie)
    "spacy>=3.7.4",                                                                                                                           # Industrial-strength NLP library
    "en-core-web-sm @https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl", # Small English model
    "en-core-web-lg @https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl", # Large English model with word vectors
    "abbreviations>=0.2.5",                                                                                                                   # Abbreviation detection and expansion
    "unidecode>=1.3.8",                                                                                                                       # ASCII transliteration of Unicode text
    # ============================================
    # Search & Retrieval
    # ============================================
    "rank-bm25>=0.2.2",       # BM25 ranking algorithm implementation
    "bm25s>=0.2.13",          # Fast BM25 search with NumPy
    "fuzzysearch>=0.8.0",     # Autonomous web research agent
    "tavily-python>=0.7.12",  # Tavily search API client
    "ddgs>=9.7.0",            # DuckDuckGo search wrapper
    #"gpt-researcher>=0.14.0", # Deep search; Requires cryptography>=45.0.2
    # ============================================
    # Document Processing
    # ============================================
    "markitdown[pdf, docx, pptx]>=0.1.3", # Convert documents to markdown
    "openpyxl>=3.1.5",                    # Excel file reading and writing
    # ============================================
    # Workflow Orchestration
    # ============================================
    "prefect>=3.6.7", # Modern workflow orchestration
    "chonkie>=1.5.2",
]

[project.urls]
Homepage = "https://github.com/tclatos/genai-tk"
Repository = "https://github.com/tclatos/genai-tk"

[dependency-groups]
# Optional dependency groups for specific use cases
# Install with: uv sync --group <group-name>

# ============================================
# Database Backends
# ============================================
postgres = [
    "langchain-postgres>=0.0.15", # LangChain PostgreSQL integration for vector storage
    "psycopg[binary]>=3.2.9",     # Modern PostgreSQL adapter (v3)
    "psycopg2-binary>=2.9.10",    # Legacy PostgreSQL adapter (v2)
]

# ============================================
# Browser Automation
# ============================================
browser-control = [
    "playwright>=1.51.0",     # Headless browser automation framework
    "browser-use-sdk>=2.0.4", # High-level browser automation agent SDK
]

# ============================================
# Machine Learning Models
# ============================================
transformers = [
    "accelerate>=1.4.0",            # PyTorch model acceleration utilities
    "langchain-huggingface>=0.1.2", # LangChain integration for Hugging Face models
    "sentence-transformers>=3.4.1", # Semantic sentence embeddings
]

# ============================================
# Multi-Agent Systems
# ============================================
autogen = [
    "autogen-openaiext-client>=0.0.3", # OpenAI extension client for AutoGen
    "autogen-agentchat>=0.4.3",        # Multi-agent conversation framework
    "autogen-ext[openai]>=0.4.3",      # AutoGen extensions with OpenAI support
]

# ============================================
# Development Tools
# ============================================
dev = [
    "ruff>=0.9.1",            # Fast Python linter and formatter
    "pytest>=8.1.1",          # Modern testing framework
    "pytest-asyncio>=0.24.0", # Async test support for pytest
    "faker>=25.0.0",          # Generate fake data for testing
    "ipykernel>=6.29.4",      # Jupyter kernel for notebooks
    "ipywidgets>=8.1.2",      # Interactive widgets for Jupyter
]

[tool.uv]
default-groups = ["dev", "postgres"]

package = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["genai_tk"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
builtins = ["ic", "debug"]
line-length = 120

[tool.ruff.lint]
select = [
    "E", # Pycodestyle errors (PEP 8 style violations)
    "F", # Pyflakes errors (basic syntax and logic errors)
    "I", # isort rules (import sorting)
    "W", # Pycodestyle warnings (style issues that aren't errors)
    "B", # Bugbear - catches common bugs and anti-patterns                                                                                      
    "C", # Better comprehensions    
    #   "ASYNC", # Async 
    #   "ANN",   # Annotations
    "PIE",
    "PD",   # Pandas
    "FURB", # refurbishing and modernizing
]

ignore = [
    "E501",   # Line too long (we use 120 chars instead of default 88) 
    "W291",   # Trailing whitespace 
    "B006",   # Do not use mutable data structures for argument defaults
    "C901",   # Function is too complex , 
    "ANN401", # Annotated with Any
    "ANN002", # Annotate *args
    "ANN003", # Annotate **kwarg
    "ANN201", # Missing return type
    "ANN202", # Missing return info
]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
reportTypedDictNotRequiredAccess = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
markers = ["performance_tests: marks tests as performance tests"]


[project.scripts]
cli = "genai_tk.main.cli:main"
