[project]
name = "genai-tk"
version = "0.1.0"
description = "GenAI Toolkit - Core components for building AI applications"
authors = [{ name = "Thierry Caminel", email = "thierry.caminel@atos.net" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    # ============================================
    # Core Infrastructure
    # ============================================
    "pydantic>=2.7.0,<3",       # Data validation and settings management
    "loguru>=0.7.3",            # Structured logging with better UX
    "typer>=0.13.0",            # CLI framework with type hints
    "omegaconf>=2.3.0",         # Hierarchical configuration system
    "rich[jupyter]>=13.9.4",    # Rich terminal formatting and progress bars
    "universal-pathlib>=0.2.6", # Unified path interface for local/cloud storage
    "python-dotenv>=1.1.1",     # Environment variable management
    "beartype>=0.21.0",         # Runtime type validation
    "devtools>=0.12.2",         # Debug printing and development utilities
    "xxhash>=3.6.0",            # Fast non-cryptographic hash functions
    "httpx>=0.28.0",            # Async HTTP client
    "wrapt>=1.17",              # Transparent function/decorator wrapping
    # ============================================
    # LangChain Core Framework
    # ============================================
    "langchain>=1.0",                 # Core LangChain library
    "langchain-core>=1.0",            # LangChain abstractions and base classes
    "langchain-classic>=1.0.0",       # Classic LangChain components
    "langchain-community>=0.4",       # Community-contributed integrations
    "langchain-experimental>=0.0.42", # Experimental features and patterns
    "langgraph>=1.0",                 # Graph-based workflows and agent orchestration
    "langserve>=0.3",                 # Deploy LangChain apps as REST APIs
    "langchainhub>=0.1",              # Share and discover prompts/chains
    # ============================================
    # LLM Provider Integrations
    # ============================================
    "langchain-openai>=1.0",         # OpenAI models (GPT-4, GPT-3.5, etc.)
    "langchain-ollama>=1.0",         # Local Ollama models integration
    "langchain-deepseek>=1.0",       # DeepSeek models integration
    "langchain-mistralai>=1.0",      # Mistral AI models integration
    "langchain-groq>=1.0",           # Groq inference engine integration
    "langchain-litellm>=0.3.2",      # LiteLLM unified interface
    "langchain-anthropic>=1.3.4",    # Anthropic Claude models integration
    "langchain-google-genai>=4.2.1", # Google Gemini models integration
    "openai>=1.80.0",                # Official OpenAI Python client
    "litellm==1.82.5",               # Unified LLM API (100+ models) # FIXED because of bug
    "mistralai>=1.7.0",              # Official Mistral AI client
    # ============================================
    # Agent Frameworks
    # ============================================
    "smolagents[toolkit, mcp, openai, litellm, docker]>=1.17", # Lightweight agentic framework
    "deepagents>=0.4",                                         # Deep agents with planning, subagents, skills
    "deepagents-cli>=0.0.26",                                  # CLI for deepagents
    "langgraph-checkpoint-sqlite>=3.0.3",                      # SQLite checkpoint persistence for LangGraph
    "langchain-mcp-adapters>=0.1",                             # Model Context Protocol adapters
    "mcp[cli]>=1.4.1",                                         # Model Context Protocol core
    "agent-sandbox>=0.0.24",                                   # AIO sandbox SDK client
    "opensandbox>=0.1.5",
    "opensandbox-server>=0.1.7",
    # ============================================
    # Vector Stores & Embeddings
    # ============================================
    "chromadb>=1.0",         # Vector database for embeddings
    "langchain-chroma>=1.0", # LangChain integration for ChromaDB
    # ============================================
    # Knowledge Graphs & Structured Data
    # ============================================
    "baml-cli>=0.1.0",       # BAML CLI for structured data extraction
    "baml-lib>=0.42.0",      # BAML library for LLM-powered parsing
    "langchain-kuzu>=0.3.0", # LangChain integration for Kuzu graph DB
    "kuzu>=0.7.1",           # Embedded graph database
    # ============================================
    # NLP & Text Processing
    # ============================================
    "tokenizers>=0.21.0",                                                                                                                     # Hugging Face fast tokenizers
    "spacy>=3.8.0",                                                                                                                           # Industrial-strength NLP library
    "en-core-web-sm @https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl", # Small English model
    "en-core-web-lg @https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl", # Large English model with word vectors
    "abbreviations>=0.2.5",                                                                                                                   # Abbreviation detection and expansion
    "unidecode>=1.3.8",                                                                                                                       # ASCII transliteration of Unicode text
    # ============================================
    # Search & Retrieval
    # ============================================
    "bm25s>=0.2.13",         # Fast BM25 search with NumPy
    "fuzzysearch>=0.8.0",    # Approximate string/pattern matching
    "tavily-python>=0.7.12", # Tavily search API client
    "ddgs>=9.7.0",           # DuckDuckGo search wrapper
    #"gpt-researcher>=0.14.0", # Deep search; Requires cryptography>=45.0.2
    # ============================================
    # Document Processing
    # ============================================
    "markitdown[pdf, docx, pptx]>=0.1.3", # Convert documents to markdown
    "openpyxl>=3.1.5",                    # Excel file reading and writing
    "chonkie>=1.5.2",                     # Text chunking and splitting library
    # ============================================
    # Workflow Orchestration
    # ============================================
    "prefect>=3.6.7",     # Modern workflow orchestration
    "jinaai>=0.2.10",     # Jina AI embeddings and reranking
    "readabilipy>=0.3.0", # Web article extraction and readability parsing

    "edgeparse>=0.2.2",
    "fastembed>=0.8.0",

    # ============================================
    # Web Interface (Streamlit)
    # ============================================
    "streamlit>=1.49", # Interactive webapp framework
    "pillow>=11.0",    # Image support (used by smolagents_streamlit)
]

[project.urls]
Homepage = "https://github.com/tclatos/genai-tk"
Repository = "https://github.com/tclatos/genai-tk"

# ============================================
# Optional extras (pip-installable from git)
# uv add "genai-tk[extra] @ git+https://github.com/tclatos/genai-tk@main"
# ============================================
[project.optional-dependencies]
# Commonly needed extras: PostgreSQL vector store, browser control, HuggingFace models
extra = [
    "langchain-postgres>=0.0.15", # LangChain PostgreSQL integration for vector storage
    "psycopg[binary]>=3.2.9",     # Modern PostgreSQL adapter (v3)
    "psycopg2-binary>=2.9.10",    # Legacy PostgreSQL adapter (v2)
    "playwright>=1.51.0",         # Browser automation via CDP

    #   "accelerate>=1.4.0",            # PyTorch model acceleration utilities
    #   "langchain-huggingface>=0.1.2", # LangChain integration for Hugging Face models
]
# All optional extras combined
all = ["genai-tk[extra]"]

[dependency-groups]
# Optional dependency groups for specific use cases
# Install with: uv sync --group <group-name>

# ============================================
# Database Backends
# ============================================
postgres = [
    "langchain-postgres>=0.0.15", # LangChain PostgreSQL integration for vector storage
    "psycopg[binary]>=3.2.9",     # Modern PostgreSQL adapter (v3)
    "psycopg2-binary>=2.9.10",    # Legacy PostgreSQL adapter (v2)
    "pgembed>=0.2.0",             # Embeddings storage and search in PostgreSQL with pgvector  

]

# ============================================
# Browser Automation (sandbox browser tools)
# ============================================
browser-control = [
    "playwright>=1.51.0", # Browser automation via CDP
    # agent-sandbox is already in core dependencies
]


# ============================================
# Deer-flow Agent Integration  
# ============================================
# NOTE: Deer-flow must be installed manually after setting DEER_FLOW_PATH
#   export DEER_FLOW_PATH=/path/to/deer-flow
#   uv pip install -e $DEER_FLOW_PATH/backend
# This is intentionally left empty since uv doesn't support ${VAR} in file:// URLs
deer-flow = [
    # readabilipy is in main dependencies (required by deer-flow's Jina AI web_fetch tool)
    # agent-sandbox is in main dependencies
]

# ============================================
# Development Tools
# ============================================
dev = [
    "ruff>=0.9.1",            # Fast Python linter and formatter
    "pytest>=8.1.1",          # Modern testing framework
    "pytest-asyncio>=0.24.0", # Async test support for pytest
    "pytest-beartype>=0.2.0", # Runtime type checking for pytest
    "faker>=25.0.0",          # Generate fake data for testing
    "ipykernel>=6.29.4",      # Jupyter kernel for notebooks
    "ipywidgets>=8.1.2",      # Interactive widgets for Jupyter
    "pytest-cov>=7.0.0",
]

# ============================================
# Agent Evaluation
# ============================================
evals = [
    "openevals>=0.1.3",    # General LLM output evaluators (correctness, conciseness, trajectory judge)
    "agentevals>=0.0.9",   # Agent trajectory evaluators (match, graph trajectory, LLM-as-judge)
    "pytest-timeout>=2.3", # Per-test wall-clock timeout to prevent hanging LLM calls
]

[tool.uv]
default-groups = ["dev", "postgres", "browser-control", "evals"]

package = true

[tool.uv.sources]
# Note: a patched wheel (without the spurious volcengine-python-sdk dep) lives in vendor/.
# It can't be referenced here as a path because uv doesn't support .whl file paths for
# transitive git dependencies. To use the patched wheel instead, run:
#   uv add agent-sandbox --override vendor/agent_sandbox-0.0.26-py2.py3-none-any.whl
# in the consuming project's workspace.

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["genai_tk"]
# genai_tk/default_config/ is a symlink to config/ — auto-included as package data.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
builtins = ["ic", "debug"]
line-length = 120
exclude = [
    "ext/",       # Third-party vendor code
    "notebooks/", # Jupyter notebooks (may have parse errors)
    ".venv/",
]

[tool.ruff.format]
docstring-code-format = true # Formats code blocks in docstrings

[tool.ruff.lint]
select = [
    "E", # Pycodestyle errors (PEP 8 style violations)
    "F", # Pyflakes errors (basic syntax and logic errors)
    "I", # isort rules (import sorting)
    "W", # Pycodestyle warnings (style issues that aren't errors)
    "B", # Bugbear - catches common bugs and anti-patterns                                                                                      
    "C", # Better comprehensions    
    #   "ASYNC", # Async 
    #   "ANN",   # Annotations
    "PIE",
    "PD",   # Pandas
    "FURB", # refurbishing and modernizing
]

ignore = [
    "E501",    # Line too long (we use 120 chars instead of default 88) 
    "W291",    # Trailing whitespace 
    "B006",    # Do not use mutable data structures for argument defaults
    "C901",    # Function is too complex , 
    "ANN401",  # Annotated with Any
    "ANN002",  # Annotate *args
    "ANN003",  # Annotate **kwarg
    "ANN201",  # Missing return type
    "ANN202",  # Missing return info
    "COM812",  # Trailing comma missing — conflicts with the ruff formatter
    "ISC001",  # Implicit string concatenation on one line — conflicts with the ruff formatter
    "PERF203", # `try`-`except` within a loop — incurs overhead only when exceptions are common
    "SLF001",  # Access to a private member of an external class
    "PLR0913", # Too many arguments to function definition
    "PLC0414", # Import alias does not rename original package — conflicts with type-checker re-export conventions
]
unfixable = ["B028"] # Rules that shouldn't be auto-fixed

[tool.ruff.lint.per-file-ignores]
# Tests: relax annotations, docstrings, magic values, security, and assertion style
"tests/**" = [
    "ANN001",  # Missing type annotation for function argument
    "ANN201",  # Missing return type annotation for public function
    "ANN202",  # Missing return type annotation for private function
    "ARG002",  # Unused method argument — common for pytest fixtures
    "D1",      # Missing docstrings
    "PLR2004", # Magic value used in comparison — fine in test assertions
    "PT018",   # Assertion should be broken down into multiple parts
    "S101",    # Use of `assert` detected
    "S311",    # Pseudo-random generator not suitable for security — fine in tests
]
# Scripts: allow prints, broad exceptions, and standalone modules
"scripts/**" = [
    "BLE001", # Blind exception catch — resilience in standalone scripts
    "INP001", # Missing `__init__.py` — scripts are standalone
]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
reportTypedDictNotRequiredAccess = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
filterwarnings = [
    # Suppress beartype warning about already-imported packages
    "ignore:Previously imported packages.*",
    # Suppress langsmith's deprecated Pydantic v1 API usage
    "ignore:The `dict` method is deprecated.*",
    # Suppress Pydantic serialization warning from deer-flow's RunnableConfig.context field
    "ignore:Pydantic serializer warnings.*",
]
beartype_packages = [
    # Core infrastructure — fully checked
    "genai_tk.core",
    "genai_tk.cli",
    "genai_tk.mcp",
    # Agents — deepagent_cli skipped (TYPE_CHECKING forward refs + mock issues)
    "genai_tk.agents.sandbox",
    "genai_tk.agents.smolagents",
    "genai_tk.agents.commands_agents",
    "genai_tk.agents.langchain_setup",
    # Tools — langchain tools skipped (mock return-type violations in tests)
    "genai_tk.tools.tool_specs",
    "genai_tk.tools.smolagents",
]
markers = [
    "performance_tests: marks tests as performance tests",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow-running",
    "network: marks tests that require network access",
    "fake_models: marks tests that use fake/mock models only",
    "real_models: marks tests that call real AI models (opt-in via --include-real-models)",
    "evals: marks eval tests (trajectory match, LLM-judged, multi-turn simulation)",
    "deerflow: marks tests that require DEER_FLOW_PATH and a running deer-flow backend",
]


[project.scripts]
cli = "genai_tk.main.cli:main"
